# hitools

./: .gitignore  LICENSE  MANIFEST.in  README.md  main.html  main.py  setup.cfg  test.py
hitools/: Errors.py  Hydrograph.py  LoadData.py  Ploot.py  Plot.py  SErrors.py  __init__.py
hitools/Visualization/: Hydrograph.py  Plot.py  __init__.py
hitools/data/: P_choluteca.xlsx  P_guayubin.xlsx  P_tempisque.xlsx  discharge_Itacoatiara.csv  discharge_Obidos.csv
hitools_pkg_Gerald.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
