[metadata]
# replace with your username:
name = hitools-pkg-Gerald
version = 0.0.1
author = Gerald Corzo
author_email = gerald.corzo@gmail.com
description = This is a packege meant to cover basic hydroinformatic tools
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/gerald-corzo/hitools
project_urls =
    Bug Tracker = https://github.com/gerald-corzo/hitools/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.6